--- a/firebase.json
+++ b/firebase.json
@@ -20,7 +20,7 @@
     }
   ],
   "hosting": {
-    "public": "dist/srp-quiz",
+    "public": "dist/srp-quiz/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
