--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "angularfire2": "^5.4.2",
     "firebase": "^10.12.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
